--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,13 @@
-form {
-	border: solid 1px #000;
-	width: 1100px;
-	display: flex;
-	background-color: rgb(11, 83, 83);
-	height: 70%;
-	margin: 0 auto;
+body {
+  background: url("./ahoy.jpg");
 }
-.container {
-	border: solid 1px #000;
-	width: 33.3%;
-	height: 600px;
-	align-items: center;
+.container-answers > div.answer-div {
+  background: rgba(75, 56, 56, 0.671) !important;
+  -webkit-transition: all 0.3s ease !important;
+  -moz-transition: all 0.3s ease !important;
+  -o-transition: all 0.3s ease !important;
+  transition: all 0.3s ease !important;
 }
-.task-container {
-	width: 80%;
-	margin: 15px 0px 0px 35px;
-	border: solid 1px #000;
-	background-color: rgb(9, 134, 134);
-	border-radius: 10px;
+div.answer-div:hover {
+  background: #53ea93 !important;
 }
