--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,24 @@
 body {
-  background: url("./ahoy.jpg");
+   background: url("./ahoy.jpg");
 }
 .container-answers > div.answer-div {
-  background: rgba(75, 56, 56, 0.671) !important;
-  -webkit-transition: all 0.3s ease !important;
-  -moz-transition: all 0.3s ease !important;
-  -o-transition: all 0.3s ease !important;
-  transition: all 0.3s ease !important;
+   background: rgba(75, 56, 56, 0.671) !important;
+   -webkit-transition: all 0.3s ease !important;
+   -moz-transition: all 0.3s ease !important;
+   -o-transition: all 0.3s ease !important;
+   transition: all 0.3s ease !important;
 }
 div.answer-div:hover {
-  background: #53ea93 !important;
+   background: #53ea93 !important;
+}
+.btn-container {
+   list-style: none;
+   display: flex;
+   justify-content: center;
+   color: blue;
+}
+.btn-container li {
+   cursor: pointer;
+   margin-right: 20px;
+   font-size: 50px;
 }
